private/manifests/zitadel.yaml
---
# Source: zitadel/charts/postgresql/templates/primary/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: zitadel-postgresql
  namespace: "zitadel"
  labels:
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 18.3.0
    helm.sh/chart: postgresql-18.5.5
    app.kubernetes.io/component: primary
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: zitadel
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 5432
---
# Source: zitadel/charts/postgresql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: zitadel-postgresql-hl
  namespace: "zitadel"
  labels:
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 18.3.0
    helm.sh/chart: postgresql-18.5.5
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
---
# Source: zitadel/charts/postgresql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zitadel-postgresql
  namespace: "zitadel"
  labels:
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 18.3.0
    helm.sh/chart: postgresql-18.5.5
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
      nodePort: null
  selector:
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
---
# Source: zitadel/templates/service_zitadel.yaml
apiVersion: v1
kind: Service
metadata:
  name: zitadel
  namespace: zitadel
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
  labels:
    helm.sh/chart: zitadel-9.34.0
    app.kubernetes.io/name: zitadel
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/version: "v4.13.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http2-server
      appProtocol: kubernetes.io/h2c
  selector:
    app.kubernetes.io/name: zitadel
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/component: start
---
# Source: zitadel/templates/deployment_zitadel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zitadel
  namespace: zitadel
  labels:
    helm.sh/chart: zitadel-9.34.0
    app.kubernetes.io/name: zitadel
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/version: "v4.13.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: start
spec:
  revisionHistoryLimit: 10
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zitadel
      app.kubernetes.io/instance: zitadel
      app.kubernetes.io/component: start
  template:
    metadata:
      annotations:
        checksum/configmap: c84be01e3df285cc1d150ef7860bb21dd9e7f0b8d703a3e63059a48abc7e0ed1
        checksum/secret-db-ssl-ca-crt: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/secret-zitadel-secrets: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
      labels:
        helm.sh/chart: zitadel-9.34.0
        app.kubernetes.io/name: zitadel
        app.kubernetes.io/instance: zitadel
        app.kubernetes.io/version: "v4.13.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: start
    spec:
      serviceAccountName: zitadel
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      enableServiceLinks: false
      containers:
        - name: "zitadel"
          securityContext:
              privileged: false
              readOnlyRootFilesystem: true
              runAsNonRoot: true
              runAsUser: 1000
          image: "ghcr.io/zitadel/zitadel:v4.13.0"
          imagePullPolicy: IfNotPresent
          args:
            - start
            - --config
            - /config/zitadel-config-yaml
            - --masterkeyFromEnv
          ports:
          - containerPort: 8080
            name: http2-server
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /debug/healthz
              port: http2-server
              httpHeaders:
                - name: Host
                  value: zitadel.zitadel.svc.cluster.local
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /debug/ready
              port: http2-server
              httpHeaders:
                - name: Host
                  value: zitadel.zitadel.svc.cluster.local
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /debug/ready
              port: http2-server
              httpHeaders:
                - name: Host
                  value: zitadel.zitadel.svc.cluster.local
              scheme: HTTP
            periodSeconds: 5
            failureThreshold: 120
          volumeMounts:
          - name: zitadel-config-yaml
            mountPath: /config
            readOnly: true
          resources:
              {}
      volumes:
      - name: zitadel-config-yaml
        configMap:
          name: zitadel-config-yaml
---
# Source: zitadel/charts/postgresql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zitadel-postgresql
  namespace: "zitadel"
  labels:
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 18.3.0
    helm.sh/chart: postgresql-18.5.5
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  serviceName: zitadel-postgresql-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: zitadel
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  template:
    metadata:
      name: zitadel-postgresql
      labels:
        app.kubernetes.io/instance: zitadel
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/version: 18.3.0
        helm.sh/chart: postgresql-18.5.5
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: zitadel-postgresql
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: zitadel
                    app.kubernetes.io/name: postgresql
                    app.kubernetes.io/component: primary
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: registry-1.docker.io/bitnami/postgresql:latest
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "zitadel" -d "dbname=zitadel" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "zitadel" -d "dbname=zitadel" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/tmp
              subPath: app-tmp-dir
            - name: postgresql-password
              mountPath: /opt/bitnami/postgresql/secrets/
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: postgresql-password
          secret:
            secretName: zitadel-postgresql
        - name: dshm
          emptyDir:
            medium: Memory
        - name: data
          emptyDir: {}
---
# Source: zitadel/templates/hpa_login.yaml
#file: noinspection ExcessiveWhitespaceTrimInspection,KubernetesUnknownResourcesInspection
---
# Source: zitadel/templates/hpa_zitadel.yaml
#file: noinspection ExcessiveWhitespaceTrimInspection,KubernetesUnknownResourcesInspection
---
# Source: zitadel/templates/secret_self-signed.yaml
#file: noinspection HelmUnknownValues
---
# Source: zitadel/templates/servicemonitor.yaml
#file: noinspection KubernetesUnknownResourcesInspection
---
# Source: zitadel/templates/servicemonitor_login.yaml
#file: noinspection KubernetesUnknownResourcesInspection
